@@ -123,5 +123,6 @@ void DLL_CALLCONV InitDDS(Plugin *plugin, int format_id);
 void DLL_CALLCONV InitGIF(Plugin *plugin, int format_id);
 void DLL_CALLCONV InitHDR(Plugin *plugin, int format_id);
 void DLL_CALLCONV InitG3(Plugin *plugin, int format_id);
+void DLL_CALLCONV InitSGI(Plugin *plugin, int format_id);
 
 #endif //!PLUGIN_H
